addinf code for CXFLW-1050 CXFLW-1086 CXFLW-1217 (#1357)
Co-authored-by: Satyam Chaurasia <samchaurasia86@gmail.com>